testing/framework/resources/Advanced/Failing/mondrian/query5639.q
select time_by_day.the_year as c0, time_by_day.quarter as c1, customer.customer_id as c2, sum(sales_fact_1997.unit_sales) as m0 from time_by_day as time_by_day, sales_fact_1997 as sales_fact_1997, customer as customer where sales_fact_1997.time_id = time_by_day.time_id and time_by_day.the_year = 1997 and time_by_day.quarter in ('Q2', 'Q3') and sales_fact_1997.customer_id = customer.customer_id and customer.customer_id in (61, 73, 79, 122, 158, 168, 293, 335, 354, 387, 400, 420, 454, 463, 472, 554, 566, 569, 588, 612, 614, 711, 714, 739, 758, 817, 863, 921, 1003, 1024, 1097, 1107, 1115, 1140, 1185, 1197, 1289, 1334, 1345, 1449, 1508, 1615, 1696, 1744, 1765, 1802, 1825, 1832, 1874, 1896, 1917, 1925, 1974, 1977, 2011, 2032, 2060, 2065, 2067, 2077, 2095, 2135, 2171, 2272, 2426, 2441, 2547, 2588, 2616, 2645, 2664, 2682, 2776, 2815, 2829, 2894, 2952, 2966, 2981, 3075, 3112, 3197, 3267, 3286, 3304, 3351, 3422, 3446, 3504, 3539, 3549, 3643, 3664, 3673, 3719, 3725, 3819, 3825, 3921, 3928, 4069, 4070, 4152, 4204, 4221, 4316, 4351, 4445, 4457, 4516, 4540, 4552, 4557, 4567, 4609, 4610, 4615, 4622, 4643, 4651, 4670, 4709, 4719, 4803, 4810, 4822, 4958, 4985, 5002, 5019, 5068, 5143, 5162, 5204, 5210, 5350, 5353, 5398, 5410, 5419, 5453, 5461, 5555, 5568, 5590, 5616, 5644, 5677, 5707, 5790, 5829, 5844, 5847, 5902, 5923, 5956, 5962, 5999, 6001, 6008, 6013, 6105, 6161, 6162, 6208, 6265, 6324, 6347, 6383, 6484, 6530, 6541, 6554, 6560, 6581, 6599, 6647, 6675, 6684, 6690, 6751, 6759, 6830, 6888, 7052, 7133, 7171, 7190, 7233, 7276, 7281, 7282, 7293, 7358, 7370, 7382, 7526, 7580, 7655, 7678, 7683, 7696, 7813, 7831, 7865, 7896, 7913, 8026, 8060, 8084, 8141, 8172, 8189, 8206, 8218, 8235, 8284, 8289, 8311, 8336, 8414, 8417, 8418, 8454, 8463, 8500, 8551, 8577, 8578, 8587, 8612, 8669, 8687, 8746, 8769, 8770, 8771, 8860, 8945, 8946, 8958, 8970, 9016, 9063, 9111, 9134, 9139, 9146, 9169, 9176, 9271, 9309, 9321, 9327, 9366, 9376, 9421, 9439, 9487, 9498, 9512, 9534, 9667, 9697, 9698, 9745, 9752, 9870, 9891, 9937, 9967, 9976, 10015, 10043, 10068, 10073, 10092, 10131, 10140, 10225, 10226) group by time_by_day.the_year, time_by_day.quarter, customer.customer_id;
